# army-light

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
army_light/: __init__.py  __main__.py  app.py  cli.py  config.py  controller.py  discovery.py  effects.py  packets.py  palette.py  server.py  swatches.py
docs/: INSTALL.md  PROTOCOL.md
ios/: .gitignore  README.md
ios/ArmyLight.xcodeproj/: project.pbxproj
ios/ArmyLight/App/: ArmyLightApp.swift
ios/ArmyLight/Assets.xcassets/AccentColor.colorset/: Contents.json
ios/ArmyLight/BLE/: BLEEngine.swift  WandController.swift
ios/ArmyLight/Protocol/: Effects.swift  Packets.swift  Palette.swift
ios/ArmyLight/Rules/: ColorRule.swift  RulesEngine.swift
ios/ArmyLight/Settings/: Settings.swift
ios/ArmyLight/Views/: ControlView.swift  RulesView.swift  SettingsView.swift
ios/ArmyLightTests/: EffectsTests.swift  PacketsTests.swift  PaletteTests.swift  RulesEngineTests.swift  SettingsTests.swift
packaging/: app_main.py  setup_app.py
streamdeck/: README.md  generate.py
streamdeck/com.armylight.control.sdPlugin/: index.html  manifest.json  plugin.js
streamdeck/com.armylight.control.sdPlugin/pi/: brightness.html  color.html  command.html  effect.html  pi.js  style.css
tests/: test_config.py  test_controller.py  test_effects.py  test_packets.py  test_palette.py  test_server.py  test_swatches.py
